# ChangeLog for x11-libs/qt-assistant
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> metadata.xml:
  Added exceptions flag description.

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> qt-assistant-4.5.9999.ebuild,
  qt-assistant-4.6.0_alpha_pre1.ebuild, qt-assistant-4.6.9999.ebuild,
  qt-assistant-4.9999.ebuild:
  Removed LICENSE declarations (it's inherited from the eclass).

  13 Sep 2009; Dominik Kapusta <d@ayoy.net>
  +files/4.6.0_alpha_pre1-tools.patch, qt-assistant-4.6.0_alpha_pre1.ebuild:
  Some directories added to be unpacked to fix compilation errors.

  27 Jun 2009; Dror Levin <spatz@psybear.com> -qt-assistant-4.5.2.ebuild:
  Moved to tree.

*qt-assistant-4.5.2 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-assistant-4.5.2.ebuild:
  Version bump to 4.5.2

  24 May 2009; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Drop unsed use flag description, QA fixes

  29 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-assistant-4.5.1.ebuild:
  Remove 4.5.1. On tree now

*qt-assistant-4.5.1 (23 Apr 2009)

  23 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +qt-assistant-4.5.1.ebuild:
  qt 4.5.1 version bump

  21 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-assistant-4.5.9999.ebuild, qt-assistant-4.9999.ebuild:
  Sync with tree

  08 Apr 2009; Maciej Mrozowski (reavertm) <reavertm@poczta.fm>
  qt-assistant-4.5.9999.ebuild, qt-assistant-4.9999.ebuild:
  Fixed some underquoted variables, fixed implicit RDEPEND

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> -qt-assistant-4.5.0.ebuild:
  Cleaning out 4.5.0 ebuilds that are now in portage

*qt-assistant-4.5.0 (03 Mar 2009)

  03 Mar 2009; Ben de Groot <yngwin@gentoo.org>
  +qt-assistant-4.5.0.ebuild:
  Add 4.5.0 release ebuild for testing

*qt-assistant-4.5.9999 (06 Feb 2009)

  06 Feb 2009; Markos Chandras <hwoarang@gentoo.org>