@@ -1,9 +1,9 @@
-AUX 4.6.0_alpha_pre1-tools.patch 1066 RMD160 d98afbd20029d03d25f07e2fede80fb7757418a1 SHA1 9408cfe7eba54d442bce1ada146e62d96cc87c1e SHA256 dee2c3f322059f5b6b7cce7332bad5f961b453822dab4f715e69fe46b319efb5
 AUX Assistant.desktop 368 RMD160 dd28aea43bc8e013e6631d0ee91449b8a2e9594d SHA1 515684005a50bfa19ed84fb4105fbb9317ad5d99 SHA256 77b0852193675857141e0ce9ac521cfdab1506a822436a0dec4c4221a680cc4b
+AUX qt-assistant-4.6-tools.patch 1066 RMD160 d98afbd20029d03d25f07e2fede80fb7757418a1 SHA1 9408cfe7eba54d442bce1ada146e62d96cc87c1e SHA256 dee2c3f322059f5b6b7cce7332bad5f961b453822dab4f715e69fe46b319efb5
 DIST qt-everywhere-opensource-src-4.6.0-tp1.tar.gz 146815131 RMD160 b8526a69e7b5817f32d0f3f7133bf9213c0668bf SHA1 4394bea076279ea090549d3caa00cc1f5e33a22b SHA256 9cfe0418699e231587182b441c8f6ca68f109059c62bfc8dd9daeafb8277d211
 EBUILD qt-assistant-4.5.9999.ebuild 2106 RMD160 7f8eb85ee14786d3a31e95fe8670a64ccadbfba3 SHA1 273eb2c5f7ba74974ed390d3180cee2deb846ae3 SHA256 f8d2921d95e19d4b58e5f2eb4b75526436b56adb1273f7eb5a5dbeac6ea5f6fb
-EBUILD qt-assistant-4.6.0_alpha_pre1.ebuild 2214 RMD160 e581d3cc70f53572080632280c783aef6b10176f SHA1 e3c23a8e703a33ab2ce8d15f9aa4d71dd8ecf4ac SHA256 b2bfa5bf949607f8b77c6cf2f376122c8caaa2b124422be11f4bd6e2f675fef5
-EBUILD qt-assistant-4.6.9999.ebuild 2105 RMD160 d1bad45f6c01204dc96828fe2349a48578f8a51d SHA1 e863580ec3af7ab944bf2fb5745942a616736014 SHA256 4e43111144edf5b1e8d75d531ea977f438c65722dc70a770c9945f1cb4da1532
-EBUILD qt-assistant-4.9999.ebuild 2105 RMD160 d1bad45f6c01204dc96828fe2349a48578f8a51d SHA1 e863580ec3af7ab944bf2fb5745942a616736014 SHA256 4e43111144edf5b1e8d75d531ea977f438c65722dc70a770c9945f1cb4da1532
-MISC ChangeLog 3932 RMD160 8d7343a9875149a6bd15f7040cbd47ae33d55f98 SHA1 485f045f92d6871db6f74b1523ff0afc4d9ff13f SHA256 99ddfe80ce04a7cde178ac6c0996af8a702b69d9b09d297149ca867a65023fe5
+EBUILD qt-assistant-4.6.0_alpha_pre1.ebuild 2218 RMD160 d91fdb528fd65c9215fb81e108fb2dc9f7fd8b43 SHA1 08a08dfd1125e0264e1bc4c72a23f79d8674d592 SHA256 24d344158fdc6b241f474b797dbf206b8c505deee6a93e163752b678867c1805
+EBUILD qt-assistant-4.6.9999.ebuild 2207 RMD160 9e0e7b9294633f06fdd96443255937527bef530b SHA1 c79efd194f6801f0e3b3fdccd3243be8b79666f8 SHA256 788eecbe313d8a48f96eb56f94439c3feccc5e2450ec0094cd899990374cdcd8
+EBUILD qt-assistant-4.9999.ebuild 2207 RMD160 9e0e7b9294633f06fdd96443255937527bef530b SHA1 c79efd194f6801f0e3b3fdccd3243be8b79666f8 SHA256 788eecbe313d8a48f96eb56f94439c3feccc5e2450ec0094cd899990374cdcd8
+MISC ChangeLog 4207 RMD160 9c0aa5b5f76d0e9f3f34a624d728fdeda633a83a SHA1 c75fe78fbf9d342a2ba0d8d81f81db15d7489253 SHA256 d92c93930cce5c217c2c8f106bc0a1c7acdbf46d8e502ac268d4924fdd8b9d26
 MISC metadata.xml 369 RMD160 52b34abcd322c2436157d9045cb892cffdbf00e4 SHA1 91a5ea601ffcd5d32626c6cd23767f39ecc743cb SHA256 f92954ba27e6923458310562b1537216409895a1ba484399f49809824a80e980
