@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Sep 2009; Alex Alexander <wired@gentoo.org>
+  -files/4.6.0_alpha_pre1-tools.patch, qt-assistant-4.6.0_alpha_pre1.ebuild,
+  qt-assistant-4.6.9999.ebuild, +files/qt-assistant-4.6-tools.patch,
+  qt-assistant-4.9999.ebuild:
+  updated live ebuilds based on 4.6.0_alpha_pre1
+
   13 Sep 2009; Dominik Kapusta <d@ayoy.net> metadata.xml:
   Added exceptions flag description.
 
